[tool.poetry]
name = "turbine"
version = "0.1.0"
description = "Game engine write in Python and Raylib."
authors = ["Alexis Couronne <alexis@skitoo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
raylib = "^5.0.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pyright = "^1.1.371"
pytest = "^8.2.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
exclude = [".git", ".venv"]
indent-width = 4

[tool.ruff.lint]
select = ["E4", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
